--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -123,11 +123,9 @@ jobs:
 
       - name: Set SCRIPT_OUTPUT env var safely
         run: |
-          {
-            echo "SCRIPT_OUTPUT<<EOF"
-            echo "${{ steps.ai-title-analysis.outputs.response }}"
-            echo "EOF"
-          } >> "$GITHUB_ENV"
+          cat << 'EOF' >> "$GITHUB_ENV"
+          SCRIPT_OUTPUT="${{ steps.ai-title-analysis.outputs.response }}"
+          EOF
 
       - name: Post comment on PR
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
