--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -56,7 +56,7 @@ jobs:
 
             Compare the PR title `${{ github.event.pull_request.title }}` with your AI-generated title. Evaluate the PR title: if it does not follow the conventions or is unclear, return the AI-generated title. Otherwise, return the PR title as-is.
 
-            Keep the response concise and formatted as markdown, with the rating and PR title displayed prominently (e.g., "**Rating**: X/10", "**AI-Generated Title**: ...").
+            Keep the response concise and formatted as markdown, with the rating and AI-generated title displayed prominently (e.g., "**Rating**: X/10", "**AI-Generated Title**: ...").
             Respond ONLY in valid JSON (no markdown, no code fences) with the following fields:
             {
               "improved_rating": "<your improved rating>",
