--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -55,7 +55,8 @@ jobs:
             ```
 
             Compare the PR title `${{ github.event.pull_request.title }}` with your AI-generated title. Evaluate the PR title: if it does not follow the conventions or is unclear, return the AI-generated title. Otherwise, return the PR title as-is.
-
+            Check if the PR title `${{ github.event.pull_request.title }}` is a valid title.
+            
             Keep the response concise and formatted as markdown, with the rating and AI-generated title displayed prominently (e.g., "**Rating**: X/10", "**AI-Generated Title**: ...").
             Respond ONLY in valid JSON (no markdown, no code fences) with the following fields:
             {
@@ -74,7 +75,7 @@ jobs:
           cat > /tmp/ai-title-comment.md <<EOF
           ## 🤖 AI PR Title Suggestion for Stirling-PDF
 
-          **Rating**: $IMPROVED_RATING
+          **PR-Title Rating**: $IMPROVED_RATING
 
           ### ⬇️ Suggested Title (copy & paste):
           \`\`\`
