--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -45,7 +45,7 @@ jobs:
             You are a professional software engineer. Based on the following git diff, generate a **concise** and **meaningful** pull request title in **English**, using **Markdown format** and starting with one of the conventional commit types:
             build, chore, ci, docs, feat, fix, perf, refactor, revert, style, test.
 
-            Do NOT use emojis. Do NOT include additional description. Output only a single **Markdown-formatted** line with no explanation.
+            Do NOT use emojis. Do NOT include additional description.
 
             Example: `refactor: improve session lifecycle handling in login filter`
 
@@ -54,14 +54,16 @@ jobs:
             ${{ steps.get_diff.outputs.diff }}
             ```
 
-            Compare the PR title `${{ github.event.pull_request.title }}` with your AI-generated title. Evaluate the PR title: if it does not follow the conventions or is unclear, return the AI-generated title. Otherwise, return the PR title as-is.
-            Check if the PR title `${{ github.event.pull_request.title }}` is a valid title and reflects the content of the diff ${{ steps.get_diff.outputs.diff }}
+            Compare the PR title `${{ github.event.pull_request.title }}` with your AI-generated title. Evaluate the PR title using the following criteria:
 
-            Keep the response concise and formatted as markdown, with the rating and AI-generated title displayed prominently (e.g., "**Rating**: X/10", "**AI-Generated Title**: ...").
-            Respond ONLY in valid JSON (no markdown, no code fences) with the following fields:
+            - It must meaningfully describe the change and reflect the content of the diff.
+            - Titles like "1", "update", "fix", or any title under 5 characters must be rated no higher than 3/10.
+            - If the title fails these rules, provide a corrected title.
+
+            Respond ONLY in strict valid JSON (no markdown, no code fences, no trailing commas) with the following fields:
             {
-              "improved_rating": "<your improved rating>",
-              "improved_ai_title_rating": "<your improved ai title rating>",
+              "improved_rating": "<your rating of the current PR title out of 10>",
+              "improved_ai_title_rating": "<your rating of your suggested title>",
               "improved_title": "<your improved title>"
             }
 
@@ -70,8 +72,8 @@ jobs:
           echo '${{ steps.ai-title-analysis.outputs.response }}' > ai_response.json
 
           # Parse JSON fields using jq
-          IMPROVED_RATING=$(jq -r '.improved_rating' ai_response.json)
-          IMPROVED_TITLE=$(jq -r '.improved_title' ai_response.json)
+          IMPROVED_RATING=$(jq -r '.improved_rating // "?"' ai_response.json)
+          IMPROVED_TITLE=$(jq -r '.improved_title // "?"' ai_response.json)
 
           cat > /tmp/ai-title-comment.md <<EOF
           ## 🤖 AI PR Title Suggestion for Stirling-PDF
