--- a/.github/workflows/ai_pr_title_review.yml
+++ b/.github/workflows/ai_pr_title_review.yml
@@ -30,9 +30,15 @@ jobs:
 
       - name: actor github User
         id: actor
-        run: echo "${{ github.actor }}"
+        run: |
+          if [ "${{ github.actor }}" == "PeterPan" ]; then
+            echo "is_repo_dev=true" >> $GITHUB_OUTPUT
+          else
+            echo "is_repo_dev=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Get PR diff
+        if: steps.actor.outputs.is_repo_dev == 'true'
         id: get_diff
         run: |
           git fetch origin ${{ github.base_ref }}
@@ -42,6 +48,7 @@ jobs:
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: AI PR Title Analysis
+        if: steps.actor.outputs.is_repo_dev == 'true'
         id: ai-title-analysis
         uses: actions/ai-inference@v1
         with:
@@ -73,6 +80,7 @@ jobs:
             }
 
       - name: Set SCRIPT_OUTPUT env var safely
+        if: steps.actor.outputs.is_repo_dev == 'true'
         run: |
           echo '${{ steps.ai-title-analysis.outputs.response }}' > ai_response.json
 
@@ -95,6 +103,7 @@ jobs:
           EOF
 
       - name: Post comment on PR if needed
+        if: steps.actor.outputs.is_repo_dev == 'true'
         uses: actions/github-script@v7
         with:
           github-token: ${{ steps.setup-bot.outputs.token }}
