--- a/.github/workflows/ai_pr_title_review.yml
+++ b/.github/workflows/ai_pr_title_review.yml
@@ -94,6 +94,8 @@ jobs:
             Evaluate the current PR title and your own suggestion:
             - If the title is non-descriptive (e.g. "update", "fix", "1"), too short (<5 characters), or not aligned with the diff content, it must receive a rating of 3 or lower.
             - Rate both titles from 0 to 10, using numbers only (no slashes, no "10/10").
+            - your title length must be between 5 and 72 characters and printable ASCII characters only.
+            - If your title is better than the current PR title, it must receive a rating of 6 or higher.
 
             Respond ONLY with valid JSON, without any Markdown, code fences, or additional text:
             {
